# fenicsx_jax

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: formatting.yml  test_package.yml
examples/: mms.py  neural_network_example.py  rvpinns.py
sandbox/: jorgen.py  requirements.txt  test_neural_network.py
src/fenicsx_jax/: __init__.py  fem.py
test/: test_optimization_problem.py  test_replacement_operator.py
